fix: contact us form on mobile view

--- a/assets/css/contact-form.css
+++ b/assets/css/contact-form.css
@@ -6,11 +6,7 @@
   margin-bottom: auto;
   border-radius: 8px;
 }
-.contact-us-form {
-  width: 680px;
-  margin-left: 120px;
-  margin-right: auto;
-}
+
 #contact-heading{
   margin-top: 10px;
 }
